// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveButton loads while unavailable datasource 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  >
    ...
  </button>
</div>
`;

exports[`SaveButton renders as expected when datasource ready and not saving 1`] = `
<div>
  <button
    class="btn btn-primary"
    data-tooltip-id="storage-upgrade-tooltip"
    id="save-button"
    type="button"
  >
    <svg
      class="mr-1"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 19v-4h3l-4-5-4 5h3v4z"
      />
      <path
        d="M7 19h2v-2H7c-1.654 0-3-1.346-3-3 0-1.404 1.199-2.756 2.673-3.015l.581-.102.192-.558C8.149 8.274 9.895 7 12 7c2.757 0 5 2.243 5 5v1h1c1.103 0 2 .897 2 2s-.897 2-2 2h-3v2h3c2.206 0 4-1.794 4-4a4.01 4.01 0 0 0-3.056-3.888C18.507 7.67 15.56 5 12 5 9.244 5 6.85 6.611 5.757 9.15 3.609 9.792 2 11.82 2 14c0 2.757 2.243 5 5 5z"
      />
    </svg>
    <span>
      Save
    </span>
  </button>
</div>
`;

exports[`SaveButton renders as expected when datasource ready and saving 1`] = `
<div>
  <button
    class="btn btn-primary"
    data-tooltip-id="storage-upgrade-tooltip"
    disabled=""
    id="save-button"
    type="button"
  >
    <svg
      class="mr-1 animate-spin"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 11h5v2H2zm15 0h5v2h-5zm-6 6h2v5h-2zm0-15h2v5h-2zM4.222 5.636l1.414-1.414 3.536 3.536-1.414 1.414zm15.556 12.728-1.414 1.414-3.536-3.536 1.414-1.414zm-12.02-3.536 1.414 1.414-3.536 3.536-1.414-1.414zm7.07-7.071 3.536-3.535 1.414 1.415-3.536 3.535z"
      />
    </svg>
    <span>
      Saving...
    </span>
  </button>
</div>
`;

exports[`SaveButton renders as expected when offline 1`] = `
<div>
  <button
    class="btn btn-primary btn-danger"
    data-tooltip-id="storage-upgrade-tooltip"
    disabled=""
    id="save-button"
    type="button"
  >
    <svg
      class="mr-1"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m1.293 8.395 1.414 1.414c.504-.504 1.052-.95 1.622-1.359L2.9 7.021c-.56.422-1.104.87-1.607 1.374zM6.474 5.06 3.707 2.293 2.293 3.707l18 18 1.414-1.414-5.012-5.012.976-.975a7.86 7.86 0 0 0-4.099-2.148L11.294 9.88c2.789-.191 5.649.748 7.729 2.827l1.414-1.414c-2.898-2.899-7.061-3.936-10.888-3.158L8.024 6.61A13.366 13.366 0 0 1 12 6c3.537 0 6.837 1.353 9.293 3.809l1.414-1.414C19.874 5.561 16.071 4 12 4a15.198 15.198 0 0 0-5.526 1.06zm-2.911 6.233 1.414 1.414a9.563 9.563 0 0 1 2.058-1.551L5.576 9.697c-.717.451-1.395.979-2.013 1.596zm2.766 3.014 1.414 1.414c.692-.692 1.535-1.151 2.429-1.428l-1.557-1.557a7.76 7.76 0 0 0-2.286 1.571zm7.66 3.803-2.1-2.1a1.996 1.996 0 1 0 2.1 2.1z"
      />
    </svg>
    <span>
      Save
    </span>
  </button>
</div>
`;
